--- a/sudoku.css
+++ b/sudoku.css
@@ -11,13 +11,13 @@
 
 #new-game{
     margin:auto;
-    display:block;;
+    display:block;
 }
 
 
 #solve{
     margin:auto;
-    display:block;;
+    display:block;
 }
 
 #container div{
